[tool.poetry]
name = "bronski"
version = "0.3.4"
description = "Simple, generic cron-like job runner service for Django"
readme = "README.rst"
authors = ["Curtis Maloney <curtis@tinbrain.net>"]
license = "MIT"
homepage = "https://github.com/uptick/bronski"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Framework :: Django",
  "Framework :: Django :: 2.2",
  "Framework :: Django :: 3.0",
  "Framework :: Django :: 3.1",
]

[tool.poetry.dependencies]
python = "^3.6"
django = ">= 2.2"
croniter = "^0.3.31"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"
pytest-freezegun = "^0.4.1"
pytest-timeout = "^1.4.1"

[tool.coverage.run]
branch = true
source = ["bronski"]

[tool.coverage.report]
skip_empty = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
