[project]
name = "bronski"
version = "0.4.0"
description = "Simple, generic cron-like job runner service for Django"
readme = "README.rst"
authors = [{name = "Curtis Maloney", email = "curtis@tinbrain.net"}]
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = [
    "django >= 3.1",
    "croniter >= 0.3.31, < 1.0",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Framework :: Django",
  "Framework :: Django :: 3.1",
]

[project.urls]
Homepage = "https://github.com/uptick/bronski"

[dependency-groups]
dev = [
    "flake8 >= 3.7.9",
    "pytest >= 7.0.0",
    "coverage[toml] >= 5.1",
    "pytest-cov >= 2.10.0",
    "pytest-mock >= 3.1.1",
    "pytest-timeout >= 2.0.0",
    "freezegun >= 1.0.0",
]

[tool.coverage.run]
branch = true
source = ["bronski"]

[tool.coverage.report]
skip_empty = true

[tool.isort]
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
