[metadata]
name = bronski
version = 0.2.1
description = "Simple, generic cron-like job runner for Django"
license = MIT

[options]
zip_safe = False
packages = find:
package_dir =
  =src
install_requires=
  django >= 2.2
  coniter >= 0.3.31

[options.packages.find]
where=src

[flake8]
max-line-length = 120
