[metadata]
name = bronski
version = 0.3.2
description = "Simple, generic cron-like job runner for Django"
license = MIT
author = Curtis Maloney
author_email = curtis@tinbrain.net
url = https://github.com/uptick/bronski

[options]
zip_safe = False
packages = find:
package_dir =
  =src
install_requires=
  django >= 2.2
  croniter >= 0.3.31

[options.packages.find]
where=src

[flake8]
max-line-length = 120
